--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,13 @@
 .page {
-  display: none;
   position: fixed;
   width: 100%;
   height: 100%;
 }
 .page.active {
-  display: block;
+  display: block !important;
+  position: fixed !important;
+  top: 0 !important;
+  left: 0 !important;
 }
 .page > * {
   width: 100%;
