--- a/less/main.less
+++ b/less/main.less
@@ -1,12 +1,15 @@
 .page {
-  display: none;
   position: fixed;
   width: 100%;
   height: 100%;
 
   &.active {
-    display: block;
+    display: block !important;
+    position: fixed !important;
+    top: 0 !important;
+    left: 0 !important;
   }
+
 
   > * {
     width: 100%;
