--- a/css/main.css
+++ b/css/main.css
@@ -2,14 +2,8 @@
   position: fixed;
   width: 100%;
   height: 100%;
+  opacity: 0;
 }
 .page.active {
-  display: block !important;
-  position: fixed !important;
-  top: 0 !important;
-  left: 0 !important;
-}
-.page > * {
-  width: 100%;
-  height: 100%;
+  opacity: 1;
 }
