--- a/less/main.less
+++ b/less/main.less
@@ -1,18 +1,23 @@
 .page {
   position: fixed;
+  //display: none;
   width: 100%;
   height: 100%;
+  //visibility: hidden;
+  opacity: 0;
 
   &.active {
-    display: block !important;
-    position: fixed !important;
-    top: 0 !important;
-    left: 0 !important;
+    //position: fixed;
+    //top: 0;
+    //left: 0;
+    opacity: 1;
+    //visibility: visible;
+    //display: block;
   }
 
 
   > * {
-    width: 100%;
-    height: 100%;
+    //width: 100%;
+    //height: 100%;
   }
 }
