--- a/css/main.css
+++ b/css/main.css
@@ -2,8 +2,13 @@
   position: fixed;
   width: 100%;
   height: 100%;
-  opacity: 0;
 }
 .page.active {
-  opacity: 1;
+  top: 0 !important;
+  left: 0 !important;
+  opacity: 1 !important;
+  display: block;
+}
+.page.hidden {
+  display: none !important;
 }
