--- a/less/main.less
+++ b/less/main.less
@@ -4,20 +4,27 @@
   width: 100%;
   height: 100%;
   //visibility: hidden;
-  opacity: 0;
+  //opacity: 0;
 
   &.active {
     //position: fixed;
-    //top: 0;
-    //left: 0;
-    opacity: 1;
+    top: 0 !important;
+    left: 0 !important;
+    opacity: 1 !important;
     //visibility: visible;
-    //display: block;
+    display: block;
   }
 
 
   > * {
     //width: 100%;
     //height: 100%;
+  }
+  &.hidden {
+    display: none !important;
+  }
+  > iframe {
+    width: 100%;
+    height: 100%;
   }
 }
