--- a/less/main.less
+++ b/less/main.less
@@ -1,3 +1,9 @@
+html {
+  height: 100%;
+}
+body {
+  height: 100%;
+}
 .page {
   position: fixed;
   //display: none;
@@ -26,5 +32,23 @@
   > iframe {
     width: 100%;
     height: 100%;
+  }
+}
+.loading-screen {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  z-index: 1000;
+  .load-box {
+    width: 16%;
+    height: 20%;
+    transition: all 1s;
+    float: left;
+    &.incomplete {
+      background-color: red;
+    }
+    &.complete {
+      background-color: blue;
+    }
   }
 }
