--- a/less/main.less
+++ b/less/main.less
@@ -34,21 +34,29 @@ body {
     height: 100%;
   }
 }
+
+
 .loading-screen {
-  width: 100%;
+  width: 80%;
+  padding-left: 10%;
+  padding-right: 10%;
   height: 100%;
   background-color: white;
   z-index: 1000;
   .load-box {
-    width: 16%;
+    box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    -webkit-box-sizing:border-box;
+    width: 100/7%;
     height: 20%;
     transition: all 1s;
     float: left;
+    border: 1px solid black;
     &.incomplete {
-      background-color: red;
+      background-color: #b10000;
     }
     &.complete {
-      background-color: blue;
+      background-color: #00e800;
     }
   }
 }
