--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@ body {
   position: fixed;
   width: 100%;
   height: 100%;
+  background-color: white;
 }
 .page.active {
   top: 0 !important;
@@ -21,6 +22,19 @@ body {
 .page > iframe {
   width: 100%;
   height: 100%;
+}
+.controls {
+  position: absolute;
+  z-index: 1000;
+  left: 50%;
+  bottom: 10%;
+  background-color: #aeaeae;
+  border-radius: 4px;
+}
+.controls > * {
+  float: left;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 .loading-screen {
   width: 80%;
