--- a/less/main.less
+++ b/less/main.less
@@ -9,6 +9,7 @@ body {
   //display: none;
   width: 100%;
   height: 100%;
+  background-color: white;
   //visibility: hidden;
   //opacity: 0;
 
@@ -34,7 +35,19 @@ body {
     height: 100%;
   }
 }
-
+.controls {
+  position:absolute;
+  z-index: 1000;
+  left: 50%;
+  bottom: 10%;
+  background-color: #aeaeae;
+  border-radius: 4px;
+  > * {
+    float: left;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+}
 
 .loading-screen {
   width: 80%;
