--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,7 @@ body {
   padding-right: 5px;
 }
 .loading-screen {
+  position: fixed;
   width: 80%;
   padding-left: 10%;
   padding-right: 10%;
